Accorpate righe di codice